feat(account): remove token from account
