# account/internal/server/grpc/user.go
@@ -20,12 +20,3 @@ func (s *UserServer) Profile(ctx context.Context, req *api.MidReq) (res *api.Pro
 	}
 	return &api.ProfileReply{Profile: profile}, nil
 }
-
-func (s *UserServer) Token(ctx context.Context, req *api.TokenReq) (res *api.TokenReply, err error) {
-	mid, err := s.u.Token(ctx, req.Token)
-	if err != nil {
-		return nil, err
-	}
-
-	return &api.TokenReply{Mid: mid}, nil
-}
